--- a/code/cfg/train_sketch_18_4.yml
+++ b/code/cfg/train_sketch_18_4.yml
@@ -1,7 +1,8 @@
 CONFIG_NAME: 'LAGAN_mutual100_self10'
 
 DATASET_NAME: 'sketches'
-DATA_DIR: '/home/rookie/cwt/ControlGAN/data/sketches'
+# DATA_DIR: 'E:/Projects/0GitHub_Repository/ed/LAGAN/data/sketches'
+DATA_DIR: '../data/sketches'
 GPU_ID: 0
 WORKERS: 2
 
@@ -20,7 +21,8 @@ TRAIN:
     DISCRIMINATOR_LR: 0.0002
     GENERATOR_LR: 0.0002
     #
-    NET_E: '/home/rookie/cwt/LAGAN2/DAMSMencoders/sketch_18_4_low_da_low_da/text_encoder.pth'
+    # NET_E: 'E:/Projects/0GitHub_Repository/ed/LAGAN/DAMSMencoders/sketch_18_4_low_da_low_da/text_encoder.pth'
+    NET_E: '../DAMSMencoders/sketch_18_4_low_da_low_da/text_encoder.pth'
     SMOOTH:
         GAMMA1: 4.0 
         GAMMA2: 5.0
